--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://tanmaykhannaco22a762:vbAX0m50F49n5Ev9@mycluster.zfqrn.mongodb.net/?retryWrites=true&w=majority&appName=MyCluster
+MONGODB_URI=mongodb+srv://tanmaykhannaco22a762:vbAX0m50F49n5Ev9@mycluster.zfqrn.mongodb.net/koinx
 PORT=5000
 
